1999-10-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntptime.c: 
	* ntpdate/ntptimeset.c: 
	* ntpdate/ntpdate.c: 
	* ntpd/refclock_trak.c: 
	* ntpd/refclock_oncore.c: 
	* ntpd/refclock_mx4200.c: 
	* ntpd/refclock_msfees.c: 
	* ntpd/refclock_atom.c: 
	* ntpd/ntp_control.c: 
	* ntpd/ntp_config.c: 
	* configure.in: 
	* configure: 
	PPS, Solaris 7, cleanup patches
	From: Marc.Brett@westgeo.com

	* ports/winnt/ntptrace/ntptrace.dsp: 
	* ports/winnt/ntpq/ntpq.dsp: 
	* ports/winnt/ntpdc/ntpdc.dsp: 
	* ports/winnt/ntpdate/ntpdate.dsp: 
	* ports/winnt/ntpd/refclock_trimbledc.c: 
	* ports/winnt/ntpd/ntpd.dsp: 
	* ports/winnt/ntpd/ntp_iocompletionport.c: 
	* ports/winnt/ntpd/nt_clockstuff.c: 
	* ports/winnt/libntp/util_clockstuff.c: 
	* ports/winnt/libntp/libntp.dsp: 
	* ports/winnt/libntp/SetSystemTime.c: 
	* ports/winnt/instsrv/instsrv.c: 
	* ports/winnt/include/sys/ioctl.h: 
	* ports/winnt/include/termios.h: 
	* ports/winnt/include/config.h: 
	* ports/winnt/include/clockstuff.h: 
	* ports/winnt/ntp.dsw: 
	* ntpd/refclock_shm.c: 
	* ntpd/refclock_palisade.c: 
	* ntpd/ntpd.c: 
	* ntpd/ntp_timer.c: 
	* ntpd/ntp_refclock.c: 
	* libntp/systime.c: 
	* libntp/machines.c: 
	NT patches
	From: Sven Dietrich <Sven_Dietrich@trimble.com>

1999-10-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwvb.c: 
	* ntpd/refclock_usno.c: 
	* ntpd/refclock_ulink.c: 
	* ntpd/refclock_tpro.c: 
	* ntpd/refclock_pst.c: 
	* ntpd/refclock_parse.c: 
	* ntpd/refclock_palisade.c: 
	* ntpd/refclock_oncore.c: 
	* ntpd/refclock_mx4200.c: 
	* ntpd/refclock_msfees.c: 
	* ntpd/refclock_jupiter.c: 
	* ntpd/refclock_irig.c: 
	* ntpd/refclock_heath.c: 
	* ntpd/refclock_chu.c: 
	* ntpd/refclock_atom.c: 
	* ntpd/refclock_as2201.c: 
	* ntpd/refclock_arc.c: 
	* ntpd/refclock_arbiter.c: 
	* ntpd/refclock_acts.c: 
	* ntpd/ntp_refclock.c: 
	* include/ntp_refclock.h: 
	Bunches of fixes.
	From: Dave Mills <mills@udel.edu>

1999-10-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/driver16.htm: New version